--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,31 +3,26 @@
   "version": "0.0.1",
   "description": "PlayIT frontend in react",
   "author": "Johan 'Ndushi' Lindskogen <johan@lindskogen.se>",
-  "main": "src/main.jsx",
   "scripts": {
-    "watch": "watchify --debug src/main.jsx -o build/app.js -v",
-    "start": "babel-node server.js",
-    "clean": "rm build/app.js"
+    "start": "node server.js",
+    "lint": "eslint src"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/cthit/playIT-python"
   },
   "dependencies": {
-    "mousetrap": "1.5.2",
-    "react": "0.13.1",
-    "react-twitter-typeahead": "^1.1.2",
-    "whatwg-fetch": "^0.7.0"
+    "mousetrap": "1.5.3",
+    "react": "0.13.3",
+    "whatwg-fetch": "^0.9.0"
   },
   "devDependencies": {
-    "babel": "^4.7.13",
-    "babelify": "^5.0.4",
-    "browserify": "^9.0.3",
-    "watchify": "^3.1.0"
-  },
-  "browserify": {
-    "transform": [
-      "babelify"
-    ]
+    "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.9",
+    "babel-loader": "^5.1.2",
+    "eslint-plugin-react": "^2.3.0",
+    "react-hot-loader": "^1.2.7",
+    "webpack": "^1.9.6",
+    "webpack-dev-server": "^1.8.2"
   }
 }
