--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,7 @@
   "description": "PlayIT frontend in react",
   "author": "Johan 'Ndushi' Lindskogen <johan@lindskogen.se>",
   "scripts": {
-    "start": "node server.js",
-    "lint": "eslint src"
+    "start": "./node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -13,21 +12,23 @@
   },
   "dependencies": {
     "mousetrap": "1.5.3",
-    "react": "0.13.3",
-    "whatwg-fetch": "^0.9.0"
+    "react": "0.14.7",
+    "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
-    "babel-core": "^5.4.7",
-    "babel-eslint": "^3.1.9",
-    "babel-loader": "^5.1.2",
-    "css-loader": "^0.16.0",
-    "eslint-plugin-react": "^2.3.0",
-    "file-loader": "^0.8.4",
-    "node-sass": "^3.2.0",
-    "react-hot-loader": "^1.2.7",
-    "sass-loader": "^2.0.0",
-    "style-loader": "^0.12.3",
-    "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.8.2"
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.3",
+    "babel-plugin-syntax-object-rest-spread": "~6.5.0",
+    "babel-plugin-transform-object-rest-spread": "~6.5.0",
+    "babel-preset-es2015": "~6.5.0",
+    "babel-preset-react": "~6.5.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "node-sass": "^3.4.2",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.1.2",
+    "style-loader": "^0.13.0",
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.14.1"
   }
 }
