--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "./node_modules/.bin/webpack-dev-server"
   },
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/cthit/playIT-python"
@@ -16,6 +17,7 @@
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
+    "autoprefixer": "~6.3.3",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-plugin-syntax-object-rest-spread": "~6.5.0",
@@ -24,9 +26,9 @@
     "babel-preset-react": "~6.5.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "node-sass": "^3.4.2",
+    "postcss-loader": "~0.8.1",
+    "precss": "~1.4.0",
     "react-hot-loader": "^1.3.0",
-    "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
