--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "mousetrap": "1.5.3",
     "react": "0.14.7",
+    "react-dom": "~0.14.7",
+    "react-redux": "~4.4.0",
+    "redux": "~3.3.1",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
