--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "~0.14.7",
     "react-redux": "~4.4.0",
     "redux": "~3.3.1",
+    "redux-persist": "^2.0.1",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
