Implement search results dropdown

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "url": "https://github.com/cthit/playIT-python"
   },
   "dependencies": {
+    "babel-polyfill": "^6.6.1",
     "mousetrap": "1.5.3",
     "react": "0.14.7",
     "react-dom": "~0.14.7",
     "react-redux": "~4.4.0",
     "redux": "~3.3.1",
     "redux-persist": "^2.0.1",
+    "redux-saga": "^0.9.3",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
