--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,27 +13,28 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.6.1",
+    "lodash": "~4.9.0",
     "mousetrap": "1.5.3",
-    "react": "0.14.7",
-    "react-dom": "~0.14.7",
+    "react": "~15.0.0",
+    "react-dom": "~15.0.0",
     "react-redux": "~4.4.0",
     "redux": "~3.3.1",
     "redux-persist": "^2.0.1",
-    "redux-saga": "^0.9.3",
+    "redux-saga": "~0.9.5",
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
-    "autoprefixer": "~6.3.3",
+    "autoprefixer": "^6.3.3",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
-    "babel-plugin-syntax-object-rest-spread": "~6.5.0",
-    "babel-plugin-transform-object-rest-spread": "~6.5.0",
-    "babel-preset-es2015": "~6.5.0",
-    "babel-preset-react": "~6.5.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
-    "postcss-loader": "~0.8.1",
-    "precss": "~1.4.0",
+    "postcss-loader": "^0.8.1",
+    "precss": "^1.4.0",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
