--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "author": "Johan 'Ndushi' Lindskogen <johan@lindskogen.se>",
   "scripts": {
     "start": "webpack-dev-server --host 0.0.0.0",
+    "test": "mocha --compilers js:babel-register"
   },
   "license": "MIT",
   "repository": {
@@ -32,9 +33,11 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "expect": "^1.16.0",
     "file-loader": "^0.8.5",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
+    "mocha": "^2.4.5",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
