--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "author": "Johan 'Ndushi' Lindskogen <johan@lindskogen.se>",
   "scripts": {
     "start": "webpack-dev-server --host 0.0.0.0",
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:babel-register",
+    "test-watch": "mocha -w --compilers js:babel-register"
   },
   "license": "MIT",
   "repository": {
