--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,10 @@
   "description": "PlayIT frontend in react",
   "author": "Johan 'Ndushi' Lindskogen <johan@lindskogen.se>",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0",
+    "start": "webpack-dev-server --hot --host 0.0.0.0",
     "test": "mocha --compilers js:babel-register",
-    "test-watch": "mocha -w --compilers js:babel-register"
+    "test-watch": "mocha -w --compilers js:babel-register",
+    "build": "NODE_ENV=production webpack -p"
   },
   "license": "MIT",
   "repository": {
