--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "lodash": "~4.9.0",
     "mousetrap": "1.5.3",
     "react": "~15.0.0",
+    "react-addons-css-transition-group": "~15.0.1",
     "react-dom": "~15.0.0",
     "react-redux": "~4.4.0",
     "redux": "~3.3.1",
