--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.6.1",
+    "classnames": "~2.2.5",
     "lodash": "~4.9.0",
     "mousetrap": "1.5.3",
     "react": "~15.3.1",
